	  accuracy of the timer-driven sampling.
	* configs/sure-pic32mx/nsh:  The PIC32 port is (finally) functional.  Add an
	  NSH configuration for the Sure PIC32MX board.
	* configs/sure-pic32mx/*/defconfig.  Calibrated all PIC32 delay loops.
	* configs/pcblogic-pic32mx/nsh:  Add an NSH configuration for the PCBLogic
	  PIC32 board.
	* Both PIC32 OS test and NSH configurations have now been verified.

6.14 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* tools/Makefile.export, mkexport.sh, and configure.sh:  Changes submitted
	  by Mike Smith to support configuration and 'make export' on MAC OS.
	* arch/arm/src/stm32/stm32_gpio.c:  Disabled interrupts while configuring
	  GPIO pins so that we have exclusive access to the GPIO configuration
	  registers.
	* arch/mips/src/pic32mx/pic32mx_usbdev.c:  Add a USB device-side driver
	  for the PIC32MX family.
	* arch/arm/src/stm32/stm32_gpio.c:  Correct an error in some of the GPIO
	  initialization logic.  Fix submitted by Mike Smith.
	* configs/olimex-lpc1766stk/src/up_leds.c:  Add new interfaces so that is
	  CONFIG_ARCH_LEDS are not set, the LEDs may be controlled from application
	  logic.
	* configs/olimex-lpc1766stk/src/up_buttons.c:  Add support form the buttons
	  on the Olimex LPC1766-STK board.
	* Makefile:  Added 'apps_clean' and 'apps_distclean' target to simplify
	  managing the state of the application directory while in the NuttX directory
	* Documentation/NuttXGettingStarted.html:  Added a "Getting Started" Guide
	  for NuttX.  At present, this is just a stub and it refers to the NuttX
	  top-level README.txt file which is the only, real "Getting Started" Guide
	  that exists at the time being.
	* arch/arm/src/lpc17xx/lpc17_gpioint.c:  Correct an value used as the lower
	  end of an IRQ number range test.
	* arch/arm/src/lpc17xx/lpc17_gpio.c:  Fix a integer flow problem in shift.
	  This error would prevent pins > 15 from being used as interrupt sources.